--- a/notebooks/basics/python.ipynb
+++ b/notebooks/basics/python.ipynb
@@ -214,7 +214,9 @@
       "[1, 2, 3] <class 'list'>\n",
       "(4, 5, 6) <class 'tuple'>\n",
       "{1, 2} <class 'set'>\n",
-      "{'key1': 1, 'key2': 'val'} <class 'dict'>\n"
+      "{'key1': 1, 'key2': 'val'} <class 'dict'>\n",
+      "inf\n",
+      "True\n"
      ]
     }
    ],
@@ -227,7 +229,9 @@
     "print([1, 2, 3], type([1, 2, 3]))  # mutable\n",
     "print((4, 5, 6), type((4, 5, 6)))  # immutable\n",
     "print({1, 2}, type({1, 2}))  # mutable\n",
-    "print({\"key1\": 1, \"key2\": \"val\"}, type({\"key1\": 1, \"key2\": \"val\"}))  # mutable"
+    "print({\"key1\": 1, \"key2\": \"val\"}, type({\"key1\": 1, \"key2\": \"val\"}))  # mutable\n",
+    "print(float('inf'))\n",
+    "print(-float('inf') <= 100 < float('inf'))"
    ]
   },
   {
@@ -891,7 +895,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "139936144258240 139936144286144\n",
+      "140245122310080 140245122268864\n",
       "True\n",
       "False\n",
       "True\n"
